--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "nodemonConfig": {
+    "ignore": ["*.json"]
+  },
   "scripts": {
     "dev": "nodemon server.js"
   },
