--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches: [ "main" ]
 
-# リポジトリ設定側（Settings → Actions → General）で
-# Workflow permissions は Read and write に設定済みとのこと → OK
 permissions:
   contents: read
   packages: write
@@ -23,16 +21,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # ← ここで "ghcr.io/<owner>/<repo>" を常に小文字にして環境変数に設定
+      # 小文字タグを作る
       - name: Compute lowercase image name
         run: echo "IMAGE=ghcr.io/${GITHUB_REPOSITORY,,}" >> "$GITHUB_ENV"
 
-      - name: Log in to GHCR
+      # ★ GHCR に PAT でログイン（切り分け用）
+      - name: Log in to GHCR (with PAT)
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_PAT }}
 
       - name: Build & Push image
         uses: docker/build-push-action@v6
