--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,17 +21,19 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      # 小文字タグを作る
       - name: Compute lowercase image name
         run: echo "IMAGE=ghcr.io/${GITHUB_REPOSITORY,,}" >> "$GITHUB_ENV"
 
-      # ★ GHCR に PAT でログイン（切り分け用）
+      - name: Sanity check secret
+        run: |
+          [ -n "${{ secrets.GHCR_PAT }}" ] || { echo "GHCR_PAT is empty"; exit 1; }
+
       - name: Log in to GHCR (with PAT)
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
           username: ${{ github.repository_owner }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          password: ${{ secrets.GHCR_PAT }}
 
       - name: Build & Push image
         uses: docker/build-push-action@v6
