--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,16 +25,29 @@ jobs:
       - name: Compute lowercase image name
         run: echo "IMAGE=ghcr.io/${GITHUB_REPOSITORY,,}" >> "$GITHUB_ENV"
 
-      # GHCR に GITHUB_TOKEN でログイン
-      - name: Log in to GHCR
+      # Secret が空だと即わかるように
+      - name: Sanity check GHCR_PAT
+        run: |
+          [ -n "${{ secrets.GHCR_PAT }}" ] || { echo "::error ::GHCR_PAT is empty (Repo → Settings → Secrets → Actions に write:packages の PAT を作成してください)"; exit 1; }
+
+      # ★ GHCR に PAT でログイン（まずは確実に通す）
+      - name: Log in to GHCR (with PAT)
         uses: docker/login-action@v3
         with:
           registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
+          username: ${{ github.repository_owner }}
+          password: ${{ secrets.GHCR_PAT }}
 
-      # イメージをビルドして :main と :<sha> を push
-      - name: Build & Push image
+      # ❶ スモーク：busybox を :main に再タグして push（GHCR 側の受け入れ確認）
+      - name: Smoke push to package (:main)
+        run: |
+          set -euxo pipefail
+          docker pull busybox:latest
+          docker tag busybox:latest "${IMAGE}:main"
+          docker push "${IMAGE}:main"
+
+      # ❷ 本番ビルド → :main / :<sha> を push
+      - name: Build & Push real image
         uses: docker/build-push-action@v6
         with:
           context: .
@@ -44,11 +57,11 @@ jobs:
             ${{ env.IMAGE }}:${{ github.sha }}
           provenance: false
 
-      # 直後に :main の存在を検証（ここで落ちたら push 失敗が明確になる）
+      # ❸ :main の存在を検証（ここまで来れば Pull してOK）
       - name: Verify :main tag exists on GHCR
         run: docker buildx imagetools inspect "${IMAGE}:main" >/dev/null
 
-      # サーバで差し替え
+      # ❹ サーバ反映
       - name: Pull & Restart via Compose
         run: |
           cd /srv/dev
